LMS-demo/force-app/main/default/objects/Sellitem__c/Sellitem__c.object-meta.xml
<CustomObject>
    <label>Sellitem</label>
    <nameField>
        <label>Sellitem Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sellitems</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>