LMS-demo/force-app/main/default/objects/Sellitem__c/fields/Merchandise__c.field-meta.xml
<CustomField>
    <fullName>Merchandise__c</fullName>
    <label>Merchandise</label>
    <referenceTo>Merchandise__c</referenceTo>
    <relationshipLabel>Sellitems</relationshipLabel>
    <relationshipName>Sellitems</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>