LMS-demo/force-app/main/default/objects/Sellitem__c/fields/Sellitem_Desc__c.field-meta.xml
<CustomField>
    <fullName>Sellitem_Desc__c</fullName>
    <label>Sellitem Desc</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>