LMS-demo/force-app/main/default/objects/Sellitem__c/fields/Sellitem_Price__c.field-meta.xml
<CustomField>
    <fullName>Sellitem_Price__c</fullName>
    <label>Sellitem Price</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>