LMS-demo/force-app/main/default/objects/Sellitem__c/fields/Sellitem_Stock__c.field-meta.xml
<CustomField>
    <fullName>Sellitem_Stock__c</fullName>
    <label>Sellitem Stock</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>