LMS-demo/force-app/main/default/objects/Sellitem__c/fields/Total_Invoice_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Invoice_Price__c</fullName>
    <formula>Sellitem_Price__c *  Sellitem_Stock__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Invoice Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>