LMS-demo/force-app/main/default/objects/Sellitem__c/validationRules/Stock_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Stock_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>Sellitem_Stock__c  &gt;  Merchandise__r.Merchandise_Stock__c</errorConditionFormula>
    <errorMessage>Stock Validation Error.</errorMessage>
</ValidationRule>